tests/NormalTests/paczka2/big_fuzzy/80134772.err
Error in line 6: rkhg81 S960 424,6
Error in line 19: 8Wmxz5rn1x S960 105,1
Error in line 24: GW6mq4pLMH A952 75,4
Error in line 44: GW6mq4pLMH A628 62,6
Error in line 60: GW6mq4pLMH S648 -2,04
Error in line 61: 1AxAclAb S648 5,9
Error in line 55: rkhg81 S648 15,3
Error in line 63: XSKf S960 42,0
Error in line 66: XSKf S648 65,1
Error in line 69: XSKf Sw48 w1,8
Error in line 68: XSKf A628 50,0
Error in line 48: GW6mq4pLMH S648 31,5
Error in line 93: GW6mq4pLMH S648 84,8
Error in line 101: GW6mq4pLMH A628 65,8
Error in line 103: GW6mq4pLMH A952 36,7
Error in line 106: S960 A628 94,0
Error in line 79: 1AxAclAb S648 16,0
Error in line 111: 1AxAclAb A952 93,6
Error in line 107: S960 S648 100,0
Error in line 116: 1AxAclAb A628 26,0
Error in line 135: XSKf S960 58,8
Error in line 146: S960 S960 0,2
Error in line 169: 8Wmx5rn1x S960 289,3
Error in line 165: 8Wmxz5rn1x S930 31,3
Error in line 178: XSKf S648 5%,9
Error in line 176: 8Wmxz5rn1x S960 2,2
Error in line 177: XSKf A952 70,6
Error in line 183: rkhg81 S648 96,5
Error in line 166: GW6mq4pLMH S648 8,8
Error in line 199: S960 S960 10L1
Error in line 203: 8Wmxz5rn1x S648 21,4
Error in line 196: Agkv A952 31,1
Error in line 200: GW6mq4pLMH S960 69,9
Error in line 219: GW6mq4pLMH S960 64,6
Error in line 216: Agkv S648 67,0
Error in line 221: XSKf A952 8,3
Error in line 217: S960 S960 0,3
Error in line 235: Agkv S960 35,2
Error in line 218: rkhg81 A628 52,9
